# titanic_kaggel

./: README.md  pyproject.toml  titanic model.ipynb
app/: main.py  metrics.py  neural_network.py  preprocessing.py
tests/: test_neural_network.py
